--- a/packages/storybook-html/.storybook/custom/components/Toc.scss
+++ b/packages/storybook-html/.storybook/custom/components/Toc.scss
@@ -79,7 +79,7 @@
         font-weight: core.$font-weight-bold;
 
         &::before {
-          background-color: core.$purple;
+          background-color: core.$purple-500;
         }
       }
     }
