--- a/packages/storybook-html/stories/components/blockquote/blockquote.scss
+++ b/packages/storybook-html/stories/components/blockquote/blockquote.scss
@@ -13,6 +13,6 @@ section {
     background-color: $white;
 }
 .background-dark {
-    background-color: $purple;
+    background-color: $purple-500;
 }
 */
