--- a/packages/storybook-html/stories/components/core/_colour.scss
+++ b/packages/storybook-html/stories/components/core/_colour.scss
@@ -90,7 +90,7 @@
 
 .uqds-colour--purple-500,
 .uqds-colour--purple {
-  background-color: core.$purple;
+  background-color: core.$purple-500;
   color: core.$white;
 }
 
@@ -120,7 +120,7 @@
 }
 
 .uqds-text-color--purple {
-  color: core.$purple;
+  color: core.$purple-500;
 }
 
 /* Black */
