--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -2,7 +2,7 @@
 
 .blockquote {
   border: none;
-  color: core.$purple;
+  color: core.$purple-500;
   font-family: core.$font-body;
   font-size: core.$font-size-m;
   font-weight: core.$font-weight-normal;
@@ -15,7 +15,7 @@
   width: calc(100% - #{core.$space-xl});
 
   &::before {
-    background-color: core.$purple;
+    background-color: core.$purple-500;
     content: "";
     height: 100%;
     left: 0;
