--- a/packages/storybook-html/stories/docs/layout/layout.scss
+++ b/packages/storybook-html/stories/docs/layout/layout.scss
@@ -75,8 +75,8 @@
         }
 
         > span {
-          background-color: lighten(core.$purple, 50%);
-          border-color: core.$purple;
+          background-color: lighten(core.$purple-500, 50%);
+          border-color: core.$purple-500;
         }
       }
 
