fix: remove red - replace with error-500

--- a/packages/app-maps/src/scss/_component.scss
+++ b/packages/app-maps/src/scss/_component.scss
@@ -675,7 +675,7 @@ $-result-icon-spacing: $-icon-spacing;
     }
 
     &--red {
-      color: core.$red;
+      color: core.$error-500;
     }
 
     &--grey {
