fix: remove yellow  shorthand and reaplce with warning-500

--- a/packages/app-maps/src/scss/_component.scss
+++ b/packages/app-maps/src/scss/_component.scss
@@ -671,7 +671,7 @@ $-result-icon-spacing: $-icon-spacing;
     }
 
     &--yellow {
-      color: core.$yellow;
+      color: core.$warning-500;
     }
 
     &--red {
