--- a/packages/storybook-html/stories/components/core/_colour.scss
+++ b/packages/storybook-html/stories/components/core/_colour.scss
@@ -387,7 +387,7 @@
 }
 
 .uqds-colour--yellow {
-  background-color: core.$yellow;
+  background-color: core.$warning-500;
 }
 
 .uqds-colour--blue {
