--- a/packages/storybook-html/stories/docs/layout/layout.scss
+++ b/packages/storybook-html/stories/docs/layout/layout.scss
@@ -53,8 +53,8 @@
 
       @media #{core.$screen-xs-up} {
         > span {
-          background-color: lighten(core.$yellow, 35%);
-          border-color: core.$yellow;
+          background-color: lighten(core.$warning-500, 35%);
+          border-color: core.$warning-500;
         }
       }
 
