fix: replace  shorthand with utility-500 and remove from contsants

--- a/packages/app-maps/src/scss/_component.scss
+++ b/packages/app-maps/src/scss/_component.scss
@@ -663,7 +663,7 @@ $-result-icon-spacing: $-icon-spacing;
     }
 
     &--blue {
-      color: core.$blue;
+      color: core.$utility-500;
     }
 
     &--green {
