--- a/packages/storybook-html/stories/components/core/_colour.scss
+++ b/packages/storybook-html/stories/components/core/_colour.scss
@@ -395,7 +395,7 @@
 }
 
 .uqds-colour--green {
-  background-color: core.$green;
+  background-color: core.$success-500;
 }
 
 /* UQ purple gradient */
