--- a/packages/storybook-html/stories/docs/layout/layout.scss
+++ b/packages/storybook-html/stories/docs/layout/layout.scss
@@ -82,8 +82,8 @@
 
       @media #{core.$screen-lg-up} {
         > span {
-          background-color: lighten(core.$green, 45%);
-          border-color: core.$green;
+          background-color: lighten(core.$success-500, 45%);
+          border-color: core.$success-500;
         }
       }
 
