--- a/packages/app-maps/src/scss/_component.scss
+++ b/packages/app-maps/src/scss/_component.scss
@@ -176,7 +176,10 @@ $-result-icon-spacing: $-icon-spacing;
       margin-right: core.$space-s;
 
       &:hover {
-        background-image: url(get-icon("ui--close", darken(core.$purple-500, 10%)));
+        background-image: url(get-icon(
+          "ui--close",
+          darken(core.$purple-500, 10%)
+        ));
       }
     }
 
@@ -325,7 +328,10 @@ $-result-icon-spacing: $-icon-spacing;
       background-image: url(get-icon("ui--swap"));
 
       &:hover {
-        background-image: url(get-icon("ui--swap", darken(core.$purple-500, 10%)));
+        background-image: url(get-icon(
+          "ui--swap",
+          darken(core.$purple-500, 10%)
+        ));
       }
     }
 
