fix: missed purple variables

--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -157,7 +157,7 @@
     &.uq-button--text {
       background-color: transparent;
       border-color: transparent;
-      color: core.$purple;
+      color: core.$purple-500;
 
       &:hover,
       &:focus {
